--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/login_db
 spring.datasource.username=root
-spring.datasource.password=Soundar@123
+spring.datasource.password=${DB_PASSWORD}
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
